gcc/testsuite/g++.old-deja/g++.pt/friend26.C
// { dg-do assemble  }

struct S
{
  friend void f<>(int); // { dg-error "" } does not match any template
};
